working drag and drop, navbar dropdown, minor bugs squashed. to cards

--- a/app/assets/stylesheets/navBarProfileDropDown.css
+++ b/app/assets/stylesheets/navBarProfileDropDown.css
@@ -9,6 +9,10 @@
   border: 1px solid #D6DADC;
 }
 
+.Dropdown{
+  display: flex;
+}
+
 .ProfileDropDown h2{
   width: 95%;
   text-align: center;
